<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" >

    <SwitchPreference
            android:key="pref_key_enabled"
            android:title="@string/pref_enabled"
            android:defaultValue="false" />
    <EditTextPreference
        	android:key="pref_key_minute_picker"
        	android:title="@string/pref_minute"/>
    <PreferenceCategory 
        	android:key="pref_key_alarm_options"
        	android:title="@string/pref_notification_options_title">
        <CheckBoxPreference android:key="pref_key_sound" android:title="@string/pref_notification_sound" android:defaultValue="true"/>
        <CheckBoxPreference android:key="pref_key_vibrate" android:title="@string/pref_notification_vibrate" android:defaultValue="true"/>
        <CheckBoxPreference android:key="pref_key_flash" android:title="@string/pref_notification_flash" android:summary="@string/pref_notification_flash_summary" android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>